platform/argocd/foundations/3ea89a3c-9dbe-4d91-83b5-d9aca34c60a3.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc435-lifecycle-20260904024221-development
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 3ea89a3c-9dbe-4d91-83b5-d9aca34c60a3
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: b003f302-cbae-41ed-ab67-e47cf8695e19
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc435-lifecycle-20260904024221-development
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 3ea89a3c-9dbe-4d91-83b5-d9aca34c60a3
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: b003f302-cbae-41ed-ab67-e47cf8695e19
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc435-lifecycle-20260904024221-development
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 3ea89a3c-9dbe-4d91-83b5-d9aca34c60a3
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: b003f302-cbae-41ed-ab67-e47cf8695e19
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-http01-solver-ingress
  namespace: kp-rc435-lifecycle-20260904024221-development
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 3ea89a3c-9dbe-4d91-83b5-d9aca34c60a3
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: b003f302-cbae-41ed-ab67-e47cf8695e19
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kuberploy-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8089
